--- a/main/resources/SquashBallDetectionApp.fxml
+++ b/main/resources/SquashBallDetectionApp.fxml
@@ -4,9 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="it.polito.teaching.cv.ObjRecognitionController">
+
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.ball.squash.cv.SquashBallController">
 	<right>
 		<VBox alignment="CENTER" spacing="10">
 			<padding>
